--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin_fakestore",
+  "name": "batiqun",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "2": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "axios": "^0.22.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.0.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
+    "chartjs": "^0.3.24",
+    "cookie": "^0.5.0",
     "js-cookie": "^3.0.1",
     "js-cookies": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "magic-sdk": "^8.1.1",
     "moda": "^2.0.0",
     "modal": "^1.2.0",
-    "next": "^11.1.2",
+    "moment": "^2.29.3",
+    "moralis": "^1.7.0",
+    "next": "^12.1.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.3",
-    "react-redux": "^7.2.5",
-    "reactstrap": "^9.0.1",
-    "redux": "^4.1.1",
+    "react-modal": "^3.15.1",
+    "react-moralis": "^1.3.5",
+    "react-redux": "^8.0.1",
+    "reactstrap": "^9.0.2",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.42.1",
-    "sweetalert2": "^11.1.9"
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.13",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6"
   }
 }
